dataset1235/2025-2/1955397009/users/1439409056/executions/1686127217_2149359571.log
== RUN (2025-08-12 13:25:24)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar:"(falta))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
XXXX:4: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Fredegunda deve pagar:"(falta))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Fredegunda deve pagar:"(falta))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
XXXX:4: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Fredegunda deve pagar:"(falta))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Fredegunda deve pagar:"(falta))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:22:59)
-- CODE: 
total = 55
H = 55
falta = total - H
print(falta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:26:46)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar: ",falta )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:26:44)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar: ",falta )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:26:39)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar: ",falta )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:26:26)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar: ", falta )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:26:42)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar: ",falta )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar:  35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:26:13)
-- CODE: 
total = 90
H = 55
falta = total - H
print("Fredegunda deve pagar: "falta )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print("Fredegunda deve pagar: "falta )
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print("Fredegunda deve pagar: "falta )
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:23:17)
-- CODE: 
total = 90
H = 55
falta = total - H
print(falta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
